examples/test/testpolicy5279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5279
  namespace: namespace246
spec:
  podSelector:
    matchLabels:
      key28: value19
      key35: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value45
          key39: value9
      podSelector:
        matchLabels:
          key14: value46
          key12: value43
          key21: value40
